# Manifold

./: .gitmodules  Manifold.cabal  README.md  cabal.project
app/: Main.hs
extras/language-manifold/: package.json
extras/language-manifold/grammars/: manifold.cson
extras/language-manifold/settings/: language-manifold.cson
extras/language-manifold/snippets/: language-manifold.cson
src/: Prelude.manifold
src/Base/: Bool.manifold  Function.manifold  Natural.manifold  Pair.manifold
src/Data/: Trifoldable.hs  Trifunctor.hs
src/Data/Map/: Monoidal.hs
src/Manifold/: Address.hs  Binding.hs  CLI.hs  Constraint.hs  Constructor.hs  Context.hs  Declaration.hs  Elaborate.hs  Env.hs  Erasure.hs  Eval.hs  Evaluator.hs  Expr.hs  Judgement.hs  Module.hs  Name.hs  Parser.hs  Pattern.hs  Presyntax.hs  Pretty.hs  Prompt.hs  Proof.hs  Purpose.hs  REPL.hs  Store.hs  Substitution.hs  Sum.hs  Term.hs  Type.hs  Unification.hs  Union.hs  Value.hs
src/Manifold/Abstract/: Address.hs  Env.hs  Evaluator.hs  Store.hs  Value.hs
src/Manifold/Abstract/Address/: Monovariant.hs  Precise.hs
src/Manifold/Expr/: Elim.hs  Intro.hs
src/Manifold/Name/: Annotated.hs
src/Manifold/Proof/: Checking.hs  Focusing.hs  Formation.hs
src/Manifold/Term/: Elim.hs  Intro.hs
src/Manifold/Type/: Checking.hs  Formation.hs  Intro.hs
src/Manifold/Value/: Intro.hs
