name:                Manifold
version:             0.0.0.0
synopsis:            Another experiment in dependently typed languages, this time with some quantitative type theory smooshed in.
-- description:
homepage:            https://github.com/robrix/Manifold
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2018 Rob Rix
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Trifoldable
                     , Data.Trifunctor
                     , Manifold.CLI
                     , Manifold.Constraint
                     , Manifold.Context
                     , Manifold.Declaration
                     , Manifold.Env
                     , Manifold.Erasure
                     , Manifold.Eval
                     , Manifold.Evaluator
                     , Manifold.Module
                     , Manifold.Name
                     , Manifold.Name.Annotated
                     , Manifold.Parser
                     , Manifold.Pattern
                     , Manifold.Pretty
                     , Manifold.Prompt
                     , Manifold.Proof
                     , Manifold.Proof.Checking
                     , Manifold.Proof.Formation
                     , Manifold.Purpose
                     , Manifold.REPL
                     , Manifold.Store
                     , Manifold.Substitution
                     , Manifold.Term
                     , Manifold.Term.Elim
                     , Manifold.Term.Intro
                     , Manifold.Type
                     , Manifold.Type.Intro
                     , Manifold.Unification
                     , Manifold.Value
                     , Paths_Manifold
  build-depends:       base >=4.11 && <4.12
                     , bytestring
                     , containers
                     , effects
                     , haskeline
                     , indentation-trifecta
                     , optparse-applicative
                     , parsers
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , recursion-schemes
                     , semilattices
                     , semirings-modules
                     , terminal-size
                     , trifecta
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable manifold
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.11 && <4.12
                     , Manifold
                     , optparse-applicative
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctests.hs
  default-language:    Haskell2010
  build-depends:       base
                     , doctest
                     , QuickCheck
